<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <Button
    android:id="@+id/submit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit" />

    <Button
    android:id="@+id/detailed_switch_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/detailed_search" />
    
    <EditText
        android:id="@+id/first_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/last_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name" />
    

</LinearLayout>
