<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
    android:id="@+id/submit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit" />

    
    <EditText
        android:id="@+id/first_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/last_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" 
        android:ems="10" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campus_phone" 
        android:ems="10" />

    <EditText
        android:id="@+id/home_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_address" 
        android:ems="10" />

    <EditText
        android:id="@+id/campus_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campus_address" 
        android:ems="10" />

    <Spinner
        android:id="@+id/fac_dept_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/campus_address"
        android:entries= "@array/facultydeptarray" />

    <Spinner
        android:id="@+id/student_major_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries= "@array/studentmajorarray"  />

    <Spinner
        android:id="@+id/concentration_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sga_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/hiatus_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/student_class_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>