<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="8dp" >

            <EditText
                android:id="@+id/first_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/last_text"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:gravity="center_vertical|center_horizontal"
                android:ems="10"
                android:hint="@string/first_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/SlateGray" />

            <EditText
                android:id="@+id/last_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/username_text"
                android:layout_below="@+id/first_text"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:gravity="center_vertical|center_horizontal"
                android:ems="10"
                android:hint="@string/last_name"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/SlateGray" />

            <EditText
                android:id="@+id/phone_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/home_address_text"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/username_text"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:ems="10"
                android:hint="@string/campus_phone"
                android:imeOptions="actionSearch"
                android:inputType="phone"
                android:textColorHint="@color/SlateGray" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/phone_text"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/last_text"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:ems="10"
                android:hint="@string/username"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/SlateGray" />
            
            <EditText
                android:id="@+id/home_address_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_below="@+id/phone_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:gravity="center_vertical|center_horizontal"
                android:ems="10"
                android:hint="@string/home_address"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/SlateGray" />

            <EditText
                android:id="@+id/campus_address_text"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/home_address_text"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/home_address_text"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edges"
                android:ems="10"
                android:hint="@string/campus_address"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColorHint="@color/SlateGray" />

           
        <Spinner
            android:id="@+id/fac_dept_spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/campus_address_text"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:entries="@array/facultydeptarray"
            android:text="@string/hello_world" />

        <Spinner
            android:id="@+id/student_major_spinner"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fac_dept_spinner"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:entries="@array/studentmajorarray"
            android:prompt="@string/app_name" />

        <Spinner
            android:id="@+id/concentration_spinner"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/student_major_spinner"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:entries="@array/studentconcentrationarray" />

        <Spinner
            android:id="@+id/sga_spinner"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/concentration_spinner"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:entries="@array/sgaarray" />

        <Spinner
            android:id="@+id/hiatus_spinner"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sga_spinner"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:entries="@array/haitusarray" />

        <Spinner
            android:id="@+id/student_class_spinner"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/hiatus_spinner"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:entries="@array/classyeararray" />
         </RelativeLayout>



</ScrollView>
